--- a/css/hansalim copy.css
+++ b/css/hansalim copy.css
@@ -48,6 +48,41 @@ body {
   width: 100%;
   height: 100%;
 }
+/* modal */
+.modal-wrap{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  background-color: rgba(0,0,0,0.6);
+}
+.modal-main{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  height: 400px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-close{
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+.fadeOut{
+  animation: fadeOut 0.3s forwards;
+}
+@keyframes fadeOut{
+  100%{
+    opacity: 0;
+  }
+}
 /* 고정메뉴 */
 .fix-menu {
   position: fixed;
